--- a/index.html
+++ b/index.html
@@ -1,43 +1,225 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vivek Singh</title>
-    <!-- css file link -->
-    <link rel="stylesheet" href="css/index.css">
+    <title>VIVEK</title>
+    <!--TAB FAVICON-->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 
-    <!-- font link -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Quicksand:wght@500&display=swap" rel="stylesheet">
+    <!--BOOTSTRAP CSS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
+    <!--CSS FILE-->
+    <link href="index.css" rel="stylesheet">
 </head>
+
 <body>
-    <nav class="navbar">
-        <div class="nav-brand">
-            <div class="nav-brand-name">
-                <p>Vivek</p>
-            </div>
+    <!--NAVBAR SECTION-->
+    <nav class="navbar-container">
+        <div class="brand-name-container">
+            <p><a href="#home" title="Vivek">Vivek</a></p>
         </div>
-        <div class="nav-Menu">
+
+        <div class="nav-option-container">
             <ul>
-                <li class="nav-item"><span><a href="#">Home</a></span></li>
-                <li class="nav-item"><span><a href="#">About</a></span></li>
-                <li class="nav-item"><span><a href="#">Project</a></span></li>
-                <li class="nav-item"><span><a href="#">Contact</a></span></li>
+                <li><a href="#home" title="Home" onclick="hidenav();">Home</a></li>
+                <li><a href="#about" title="About" onclick="hidenav();">About</a></li>
+                <li><a href="#work" title="Work" onclick="hidenav();">Work</a></li>
+                <li><a href="#contact" title="Contact" onclick="hidenav();">Contact</a></li>
             </ul>
         </div>
-    </nav>
-    <section id="home">
-        <div class="introBox">
-            <div class="introDes">
+        <div class="burger-lines " id="jai" onclick="toggleEffect();">
+            <span class="fa-solid fa-bars fa-2x"></span>
+            <i class="fa-solid fa-xmark fa-2x"></i>
+        </div>
 
+    </nav>
+
+
+    <!--HOME SECTION-->
+    <section id="home">
+        <div class="home-center-box">
+            <div class="home-text">
+                <div>
+                    <h6>Hello there,</h6>
+                    <h1><strong>I'm Vivek</strong></h1>
+                    <h5>Data <span></span></h5>
+                </div>
+                <div class="home-buttons">
+                    <a href="#about"><button>Know More</button></a>
+                    <a href="https://github.com/Vivek1325/Resumes/raw/main/Data%20Analyst%20Resume.pdf"><button>Download Resume</button></a>
+                </div>
             </div>
-            <div class="homePic">
+            <div class="my-home-pic">
+                <img src="images/mypic.jpg" class="homepic">
+            </div>
+        </div>
+    </section>
+
+    <!--ABOUT SECTION-->
+    <section id="about">
+
+        <div>
+            <div class="about-word">
+                <h3>About Me</h3>
+            </div>
+            <div class="about-box row">
+                <div class="col-md-3 offset-md-1 about-img">
+                    <img src="images/Skills Map (1).png" class="secondpic">
+                </div>
+                <div class="col-sm-12 col-md-7 about-content-box">
+                    <div class="about-heading">
+                        <h3>DATA ANALYST, DATA SCIENTIST</h3>
+                    </div>
+                    <div class="about-content">
+                        <p>I am an aspiring computer science engineer with a passion in programming, currently pursuing
+                            my
+                            Bachelor of Engineering degree from Chandigarh University. I am a well-organized, creative
+                            and a goal-oriented person possessing excellent communication, problem solving and
+                            leadership
+                            skills, currently hustling to acquire an academic background in data analysis,
+                            data science.</p>
+                        <h3>Technical Competencies</h3>
+                        <ul>
+                            <li>PYTHON</li>
+                            <li>POWERBI</li>
+                            <li>POSTGRESQL</li>
+                            <li>DATA STRUCTURES AND ALGORITHMS</li>
+                            <li>MATPLOTLIB, PANDAS</li>
+                            <li>STATISTICS and PROBABILITY</li>
+                            <li>GIT AND GITHUB</li>
+                            <li>SUPERVISED MACHINE LEARNING</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--WORK SECITOIN-->
+    <section id="work">
+        <div>
+            <div class="work-word">
+                <h3>My Works</h3>
+            </div class="">
+            <div class="work-cards-box row">
+                <div class=" work-card col-12  col-md-6">
+                    <div class="card " style="width: 35rem;">
+                        <img src="images/Call Centre Trends_page-0001.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Call centre trends</h5>
+                            <p class="card-text">Created a dashboard in PowerBi so as to analyze call centre trends and answer different questions like cusotmer satisfaction, average speed of answer and other common questions.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="work-card col-12  col-md-6">
+                    <div class="card " style="width: 35rem;">
+                        <img src="images/Hotel Booking Analysis_page-0001.jpg" class="card-img-top" alt="Insta login web Page">
+                        <div class="card-body">
+                            <h5 class="card-title">Hotel Suite Booking Analysis</h5>
+                            <p class="card-text">Created a dashboard in PowerBi so as to answer various questions such as profit by year, total customers, total discounts etc.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="work-card col-12  col-md-6">
+                    <div class="card " style="width: 35rem;">
+                        <img src="images/SuperStore Report_page-0001.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Superstore Sales Dashboard</h5>
+                            <p class="card-text">Created a dashboard in PowerBi as to answer various sales quesitons such as sales by month or by year, quanity, discount etc.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="work-card col-12  col-md-6">
+                    <div class="card " style="width: 35rem;">
+                        <img src="images/stock_price_prediction.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Stock price prediction Model</h5>
+                            <p class="card-text">Created a stock price prediction model using LSTM algorithm and Streamlit. </p>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
     </section>
+
+    <section id="contact">
+        <div>
+            <div class="contact-word">
+                <h3>Contact Me</h3>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-6 contact-info">
+                    <div class="phone-box">
+                        <span><i class="fa-solid fa-phone fa-3x"></i></span>
+                        <span class="phone-text">
+                            <span><b>Phone</b></span>
+                            <a href="tel:7986088292">7986088292</a>
+                        </span>
+
+                    </div>
+                    <div class="email-box">
+                        <span><i class="fa-solid fa-envelope fa-3x"></i></span>
+                        <span class="phone-text">
+                            <span><b>Mail</b></span>
+                            <a href="mailto:kvivek2001@gmail.com">kvivek2001@gmail.com</a>
+                        </span>
+
+                    </div>
+
+                    <div class="social-media">
+                        <a href="https://github.com/Vivek1325" class="github" target="_blank"><i
+                            class="fa-brands fa-github fa-2x"></i></a>
+                        <a href="https://www.linkedin.com/in/vivek-singh-gulia-9a9612220//" class="linkedin" target="_blank"><i
+                                class="fa-brands fa-linkedin fa-2x"></i></a>
+                        
+                    </div>
+
+                </div>
+                <div class="col-12 col-md-6 form-box">
+                    <form class="form" action="https://formsubmit.co/kvivek2001@gmail.com" method="POST">
+                        <!--Honeypot-->
+                        <input type="text" name="_honey" style="display: none;">
+
+                        <input type="hidden" name="_next" value="https://github.com/Vivek1325">
+
+                        <input type="text" name="Name" class="user-name" placeholder="Name" required><br>
+                        <input type="email" name="email" placeholder="Email" required><br>
+                        <input type="hidden" name="_autoresponse" class="inputMessage" value="Hii there!
+                        Thanks for your email. I will get back to you as soon as I can.
+                        best regards,
+                        Vivek">
+                        <textarea cols="45" rows="5" placeholder="Your Message" name="message" required></textarea>
+                        <input type="submit" value="submit" class="submit-button">
+                    </form>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+    <footer>
+        <p>Copyright &copy; 2022 Vivek. All right reserved</p>
+    </footer>
+
+
+
+
+
+
+    <!--FONT AWESOME JAVASCRIPT FILE-->
+    <script src="https://kit.fontawesome.com/c5dba0f59b.js" crossorigin="anonymous"></script>
+
+    <!--JAVASCRIPT FILE-->
+    <script src="index.js"></script>
 </body>
+
 </html>
