--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <span><i class="fa-solid fa-envelope fa-3x"></i></span>
                         <span class="phone-text">
                             <span><b>Mail</b></span>
-                            <a href="mailto:kvivek2001@gmail.com">kvivek2001@gmail.com</a>
+                            <a href="mailto:viveksg321123@gmail.com">viveksg321123@gmail.com</a>
                         </span>
 
                     </div>
@@ -185,7 +185,7 @@
 
                 </div>
                 <div class="col-12 col-md-6 form-box">
-                    <form class="form" action="https://formsubmit.co/kvivek2001@gmail.com" method="POST">
+                    <form class="form" action="https://formsubmit.co/viveksg321123@gmail.com" method="POST">
                         <!--Honeypot-->
                         <input type="text" name="_honey" style="display: none;">
 
