added the updated resume and made the changes in the email on website

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="home-buttons">
                     <a href="#about"><button>Know More</button></a>
-                    <a href="https://github.com/Vivek1325/Resumes/raw/main/Data%20Analyst%20Resume.pdf"><button>Download Resume</button></a>
+                    <a href="https://github.com/Vivek1325/Resumes/blob/main/Resume.pdf"><button>Download Resume</button></a>
                 </div>
             </div>
             <div class="my-home-pic">
